--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="projects_grid">
                 <a href="#salvatio_detail_page" class="project_link"><img class="project_box" alt="project" src="img/IphoneMockup.png"></a>
                 <a href="#travelday_detail_page" class="project_link" ><img class="project_box" alt="project" src="img/project1.png"></a>
-                <a href="#2gather_detail_page" class="project_link" ><img class="project_box" alt="project" src="img/2gather.png"></a>
+                <a href="#gather_detail_page" class="project_link" ><img class="project_box" alt="project" src="img/2gather.png"></a>
                 <a href="#dorte_detail_page" class="project_link" ><img class="project_box" alt="project" src="img/dorte.png"></a>
             </div>
             <img class="paint_splash" alt="Paint splash" src="img/splash.png">
