--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <img src="img/dorte.png">
                 </div>
                 <div class="description">
-                    <h4>Study Counseling BAAA</h4>
+                    <a href="#dorte_detail_page"><h4>Study Counseling BAAA</h4></a>
                     <p>Website solution created for Study Coundeling at BAAA. Project had its focus on UX and SoMe.</p>
                     <div class="category">
                         <p class="category">Role: UI Designer, UX Designer, Front-end Developer</p>
@@ -401,6 +401,44 @@
             <div class="mockup_photos">
                 <img src="img/travelday5.png" class="mockup_row2">
                 <img src="img/travelday6.png" class="mockup_row2">
+            </div>
+            <a href="https://wojo3214.github.io/TraveldayIMPROVED/" class="details_prototype">Explore the Webiste</a>
+            <p class="details_text"><b>PROCESS</b></p>
+            <p class="details_text"><b>Before creating every project final solution, I'm making a full desk and field research. As I focus on design and web development fields in my portfolio, I'm not attaching this parts of the process down below.</b>
+            </p>
+            <p class="details_text">We kept a blue color as a base for our project, as we had Travelday original website for a foundation. We wanted to be consistant in our design and create an addition to their website, not to change it completely.
+            </p>
+            <img src="img/traveldaystyle.png" class="mockup_center">
+            <p class="details_text"><b>Whole mockup that we created in Adobe XD: </b></p>
+            <img src="img/traveldaymockup.png" class="mockup_center">
+            <p class="details_text"><b>We also created a prototype of the mobile version app for Travelday: </b></p>
+            <div class="mockup_photos">
+                <img src="img/travelday1.png" class="mockup_row">
+                <img src="img/travelday2.png" class="mockup_row">
+                <img src="img/travelday3.png" class="mockup_row">
+                <img src="img/travelday4.png" class="mockup_row">
+            </div>
+        </div>
+    </section>
+
+    <!--------------STUDY COUNSELING BAAA PROJECT------------->
+    <section id="dorte_detail_page" class="page">
+        <div class="details_page">
+            <img src="img/dortelogo.png" class="salvatiologo">
+            <h4>Study Counseling BAAA</h4>
+            <p class="details_text">Website solution created for Study Coundeling at BAAA. Project had its focus on UX and SoMe.</p>
+            <div class="category details_category">
+                <p class="category"><b>Role: UI Designer, UX Designer, Front-end Developer</b></p>
+                <p class="category"><b>Program: Adobe XD, Visual Studio Code, Github, GitKraken</b></p>
+                <p class="category"><b>In Team with: Wojciech Dzwończyk, Aleksandra Wytulany and Chiara A. </b></p>
+            </div>
+            <p class="details_text"><b>Problem statement:</b></p>
+            <p class="problem">Our school Study Counseling have it's own office at Academy, but sometimes there is no one inside. In this situation a person that needs help has to wait for the eamil answer or come the other day to the office. We wanted to create a solution that would let students find their answers right away in the office even if there are no councelers available. Dorte- one of the Study Counseling representatives, also had a problem with setting up the meetings with students. We also set a goal for ourselves to solve this issue.
+                </p>
+            <p class="details_text"><b>What we created as a final solution: </b></p>
+            <div class="mockup_photos">
+                <img src="img/dorte.png" class="mockup_row">
+                <img src="img/travelday6.png" class="mockup_row">
             </div>
             <a href="https://wojo3214.github.io/TraveldayIMPROVED/" class="details_prototype">Explore the Webiste</a>
             <p class="details_text"><b>PROCESS</b></p>
