--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             </p>
             <img src="img/traveldaystyle.png" class="mockup_center">
             <p class="details_text"><b>Whole mockup that we created in Adobe XD: </b></p>
-            <img src="img/traveldaymockup.png" class="mockup_center">
+            <img src="img/traveldaymockup.jpg" class="mockup_center">
             <p class="details_text"><b>We also created a prototype of the mobile version app for Travelday: </b></p>
             <div class="mockup_photos">
                 <img src="img/travelday1.png" class="mockup_row">
@@ -444,7 +444,7 @@
             <p class="details_text"><b>PROCESS</b></p>
             <p class="details_text"><b>Before creating every project final solution, I'm making a full desk and field research. As I focus on design and web development fields in my portfolio, I'm not attaching this parts of the process down below.</b>
             </p>
-            <p class="details_text">We kept a blue color as a base for our project, as we had Travelday original website for a foundation. We wanted to be consistant in our design and create an addition to their website, not to change it completely.
+            <p class="details_text">While creating the solution we really wanted to keep in in the simpliest design, trustworthy and understandable. As it was really important for Dorte to show friendly and cozy atmosphere of Study Counseling, we put her little gif that welcomes users.
             </p>
             <img src="img/traveldaystyle.png" class="mockup_center">
             <p class="details_text"><b>Whole mockup that we created in Adobe XD: </b></p>
