--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 
                 My friends are really often laughing, that for me there is no 'free time' as I find pleasure in creating new projects even after working hours. And I have to admit - it's true. <br><br>
                 If you'd like to know me better, please check <a href="#about_me_page"><b>'About me'</b></a> section.
+                <a href="CV.pdf" class="getcv"><p class="CV">GET MY CV</p></a>
                 <div class="contact">
                     <i class="fas fa-envelope-square"></i><p>polakowska.mag@gmail.com </p>
                 </div>
@@ -437,24 +438,21 @@
                 </p>
             <p class="details_text"><b>What we created as a final solution: </b></p>
             <div class="mockup_photos">
-                <img src="img/dorte.png" class="mockup_row">
-                <img src="img/travelday6.png" class="mockup_row">
+                <img src="img/dorte.png" class="mockup_row3">
+                <img src="img/dorte1.png" class="mockup_row3">
             </div>
             <a href="https://wojo3214.github.io/TraveldayIMPROVED/" class="details_prototype">Explore the Webiste</a>
             <p class="details_text"><b>PROCESS</b></p>
             <p class="details_text"><b>Before creating every project final solution, I'm making a full desk and field research. As I focus on design and web development fields in my portfolio, I'm not attaching this parts of the process down below.</b>
             </p>
-            <p class="details_text">While creating the solution we really wanted to keep in in the simpliest design, trustworthy and understandable. As it was really important for Dorte to show friendly and cozy atmosphere of Study Counseling, we put her little gif that welcomes users.
+            <p class="details_text">While creating the solution we really wanted to keep in in the simpliest design, trustworthy and understandable. As it was really important for Dorte to show friendly and cozy atmosphere of Study Counseling, we put a little gif of her that welcomes users.
             </p>
-            <img src="img/traveldaystyle.png" class="mockup_center">
             <p class="details_text"><b>Whole mockup that we created in Adobe XD: </b></p>
-            <img src="img/traveldaymockup.png" class="mockup_center">
-            <p class="details_text"><b>We also created a prototype of the mobile version app for Travelday: </b></p>
+            <img src="img/dortemockup.png" class="mockup_center">
             <div class="mockup_photos">
-                <img src="img/travelday1.png" class="mockup_row">
-                <img src="img/travelday2.png" class="mockup_row">
-                <img src="img/travelday3.png" class="mockup_row">
-                <img src="img/travelday4.png" class="mockup_row">
+                <img src="img/dorte2.png" class="mockup_row3">
+                <img src="img/dorte3.png" class="mockup_row3">
+                <img src="img/dorte4.png" class="mockup_row3">
             </div>
         </div>
     </section>
