--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>MAGDALENA POLAKOWSKA || MULTIMEDIA DESIGNER</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Check my portfolio and let's get into collaboration!">
+    <meta name="description" content="Multimedia Design student with passion for User Experience and User Interface.">
     <meta name="author" content="Magdalena Polakowska">
-
-    <link rel="shortcut icon" type="image/png" href="img/logo.png" />
+    <meta name="keywords"
+      content="Multimedia Designer, Web Development, UX, UI, HTML, CSS, JavaScript, Graphic Design, Prototypes, Aarhus">
+    <link rel="shortcut icon" type="image/png" href="img/logo.png">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/nbd1wtw.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-    
-
-    <title>Magdalena Polakowska || Portfolio</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1e6b508437.js" crossorigin="anonymous"></script>
@@ -112,7 +112,7 @@
                 If you'd like to know me better, please check <a href="#about_me_page"><b>'About me'</b></a> section.
                 <a href="CV.pdf" class="getcv"><p class="CV">GET MY CV</p></a>
                 <div class="contact">
-                    <i class="fas fa-envelope-square"></i><p>polakowska.mag@gmail.com </p>
+                    <i class="fas fa-envelope-square"></i><a href="mailto:polakowska.mag@gmail.com"></a><p>polakowska.mag@gmail.com </p></a>
                 </div>
             </h6>
             
@@ -197,7 +197,7 @@
                 </div>
                 <div class="description">
                     <a href="#salvatio_detail_page"><h4>Salvatio Push app Prototype </h4></a>
-                    <p>Prototype created in collaboration with <a href="https://wojo3214.github.io/portfolio2/" class="wojtek">Wojciech Dzwonczyk</a>, while having an Internship in Salvatio Push company. As a goal, we set creating a solution that will be a perfect support for Salvatio Push device, the main company's product.</p>
+                    <p>Prototype created in collaboration with <a href="https://wojciechdzwonczyk.com/" class="wojtek">Wojciech Dzwonczyk</a>, while having an Internship in Salvatio Push company. As a goal, we set creating a solution that will be a perfect support for Salvatio Push device, the main company's product.</p>
                     <div class="category">
                         <p class="category">Role: UI Designer, UX Designer</p>
                         <p class="category">Program: Adobe XD</p>
@@ -263,7 +263,7 @@
         <div class="details_page">
             <img src="img/salvatiologo.png" class="salvatiologo">
             <h4>Salvatio Push app Prototype </h4>
-            <p class="details_text">Prototype created in collaboration with <a href="https://wojo3214.github.io/portfolio2/" class="wojtek">Wojciech Dzwonczyk</a>, while having an Internship in Salvatio Push company. As a goal, we set creating a solution that will be a perfect support for Salvatio Push device, the main company's product.</p>
+            <p class="details_text">Prototype created in collaboration with <a href="https://wojciechdzwonczyk.com/" class="wojtek">Wojciech Dzwonczyk</a>, while having an Internship in Salvatio Push company. As a goal, we set creating a solution that will be a perfect support for Salvatio Push device, the main company's product.</p>
             <div class="category details_category">
                 <p class="category"><b>Role: UI Designer, UX Designer</b></p>
                 <p class="category"><b>Program: Adobe XD</b></p>
@@ -330,7 +330,7 @@
                 <img src="img/gather2.png" class="mockup_row">
                 <img src="img/gather3.png" class="mockup_row">
             </div>
-            <a href="https://madeele.github.io/2Gather/" class="details_prototype">Explore the Prototype (Please change to phone preview or check it on your phone)</a>
+            <a href="https://madeele.github.io/2Gather/" class="details_prototype">Explore the Website (Please change to phone preview or check it on your phone)</a>
             <p class="details_text"><b>PROCESS</b></p>
             <p class="details_text"><b>Before creating every project final solution, I'm making a full desk and field research. As I focus on design and web development fields in my portfolio, I'm not attaching this parts of the process down below.</b>
             </p>
